--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,10 @@ jobs:
           cache-dependency-path: pnpm-lock.yaml
 
       - name: Install Dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Lint Code
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Build Project
-        run: npm run build
+        run: pnpm run build
