support client stream

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,10 +1,5 @@
 version: v2
 plugins:
-  - remote: buf.build/bufbuild/es:v1.10.0
+  - remote: buf.build/bufbuild/es:v2.5.2
     out: src/gen
-    opt:
-      - target=ts
-  - remote: buf.build/connectrpc/es:v1.4.0
-    out: src/gen
-    opt:
-      - target=ts
+    opt: htarget=ts
