--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@connectrpc/connect": "^2.0.2",
     "@connectrpc/connect-web": "^2.0.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@bufbuild/buf": "^1.55.1",
