--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@connectrpc/connect-web": "^2.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "streamsaver": "^2.0.6"
   },
   "devDependencies": {
     "@bufbuild/buf": "^1.55.1",
@@ -24,6 +25,7 @@
     "@types/node": "^24.0.3",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "@types/streamsaver": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "8.35.0",
     "@typescript-eslint/parser": "8.35.0",
     "@vitejs/plugin-react": "4.6.0",
@@ -37,5 +39,6 @@
     "typescript-eslint": "^8.35.0",
     "vite": "^7.0.0"
   },
-  "overrides": {}
+  "overrides": {},
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
