--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,3 @@
-VITE_GREET_SERVICE_URL=https://api.fawa.marsevilspirit.com:8080
-VITE_FILE_SERVICE_URL=https://api.fawa.marsevilspirit.com:8080
-VITE_CANVA_SERVICE_URL=https://api.fawa.marsevilspirit.com:8080
-VITE_CANVA_SERVICE_WEBTRANSPORT_URL=https://api.fawa.marsevilspirit.com:8081
+VITE_GREET_SERVICE_URL=https://api.fawa.marevilspirit.com/greet
+VITE_FILE_SERVICE_URL=https://api.fawa.marevilspirit.com/file
+VITE_CANVA_SERVICE_URL=https://api.fawa.marevilspirit.com/canvas
