--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_GREET_SERVICE_URL=https://api.fawa.marevilspirit.com/greet
-VITE_FILE_SERVICE_URL=https://api.fawa.marevilspirit.com/file
-VITE_CANVA_SERVICE_URL=https://api.fawa.marevilspirit.com/canvas
+VITE_GREET_SERVICE_URL=https://apifawa.marevilspirit.com/greet
+VITE_FILE_SERVICE_URL=https://apifawa.marevilspirit.com/file
+VITE_CANVA_SERVICE_URL=https://apifawa.marevilspirit.com/canvas
