--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_GREET_SERVICE_URL=https://apifawa.marsevilspirit.com/greet
-VITE_FILE_SERVICE_URL=https://apifawa.marsevilspirit.com/file
+VITE_GREET_SERVICE_URL=https://apifawa.marsevilspirit.com/greet.v1.GreetService
+VITE_FILE_SERVICE_URL=https://apifawa.marsevilspirit.com/file.v1.FileService
 VITE_CANVA_SERVICE_URL=https://apifawa.marsevilspirit.com/canvas
